...
            "state": "translated",
            "value": "Fuentes de datos"
          }
        }
      }
    },
    "Details": {
      "extractionState": "stale",
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Detalles"
          }
        }
      }
    },
    "Directions": {
      "extractionState": "stale",
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cómo llegar"
...
            "state": "translated",
            "value": "Moderado"
          }
        }
      }
    },
    "Nearby": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cercanos"
          }
...
            "state": "translated",
            "value": "Guarda tu próximo lugar de trabajo"
          }
        }
      }
    },
    "Saved": {
      "extractionState": "stale",
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Guardados"
...
